Add contact and about us

--- a/resources/assets/sass/_products.sass
+++ b/resources/assets/sass/_products.sass
@@ -175,7 +175,7 @@
   border: none
 
 .button-buy
-  background: #FFEA71
+  background: #219BDD
   color: $gr
   letter-spacing: 1px
   font-weight: 400
@@ -199,7 +199,7 @@
     position: relative
     transition: 0.5s
     &::after
-      content: url('/img/shopping-cart.png')
+      content: url('/img/cart-07.png')
       position: absolute
       opacity: 0
       top: -17px
@@ -247,4 +247,21 @@
   font-weight: 400
   &__g
     margin: 0 .5rem
+
+.product-cart
+  margin-top: 1rem
+  width: 100%
+  max-width: 600px
+  color: #4d4d4d
+  font-size: 11pt
+  margin-bottom: 3rem
+  h3
+    font-size: 19pt
+    color: #1a1a1a
+    font-weight: 700
+  p
+    margin-bottom: .3rem
+    letter-spacing: 0.26px
+
+
 
