--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -394,9 +394,9 @@ footer
         @include breakpoint(medium only)
           @include xy-cell($size: 12 of 12, $gutters: 0, $gutter-type: margin)
         .button-buy
-          background: #414042
+          background: #219BDD
           color: #ffffff
-          padding: .6rem 1.2rem
+          padding: .8rem 1.8rem
           display: table
           @include breakpoint(medium only)
             margin-left: .8rem
@@ -532,7 +532,7 @@ textarea
       text-decoration: line-through
 
   button
-    background: #414042
+    background: #219BDD
     color: $wh
     font-size: 11pt
     border-radius: 10px
@@ -573,7 +573,7 @@ textarea
       margin-bottom: 0
 
 .contact
-  height: 400px
+  height: 500px
   background: url("/img/contact-05.jpg") no-repeat left center
   background-size: cover
   width: 100%
@@ -591,7 +591,7 @@ textarea
     @include xy-cell($size: 45%, $gutters: 0)
     padding-right: 1rem
     input, select
-      margin-bottom: 1.18rem
+      margin-bottom: 1.3rem
   &__right
     @include xy-cell($size: 55%, $gutters: 0)
     button
