--- a/resources/assets/sass/_products.sass
+++ b/resources/assets/sass/_products.sass
@@ -133,6 +133,8 @@
       color: $c3
       font-size: 15pt
       margin-top: 2rem
+      @include breakpoint(medium down)
+        margin-top: 0
     &__line
       width: 100%
       border-top: 1px solid rgba(179,179,179,0.3)
