--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -670,3 +670,42 @@ textarea
       background: #219bdd
       color: #ffffff
       font-size: 12pt
+
+.menu-mov
+  background: #01135b
+  color: $wh
+  top: 0
+  position: fixed
+  right: -440px
+  width: 100%
+  max-width: 440px
+  height: 100vh
+  padding: 1.5rem
+  z-index: 10
+  opacity: 0
+  &__close
+    position: absolute
+    right: 0
+    top: 0
+    padding: 1rem
+  &__logo
+    display: table
+    margin: 0 auto 2rem
+  &__opc
+    padding: 1.5rem
+    border-bottom: 1.2px solid rgba($wh, .4)
+    font-size: 12pt
+    letter-spacing: 0.5px
+  &__follow
+    margin-top: 2rem
+    font-size: 10pt
+    letter-spacing: 1px
+    img
+      margin-right: 1rem
+
+.continue .button-buy
+  margin-left: 1rem
+  color: $wh
+  @include breakpoint(small only)
+    margin-left: 0
+    margin-top: 1rem
