--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -46,6 +46,7 @@ header
 .header
   @extend .grid-x
   @extend .align-justify
+  @extend .align-middle
   padding: .7rem 0
   @include breakpoint(medium down)
     align-items: center
