--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -14,6 +14,7 @@
 @import "fonts"
 @import "register"
 @import "products"
+@import "blog"
 
 body
   font-family: 'Lato', sans-serif
@@ -710,3 +711,17 @@ textarea
   @include breakpoint(small only)
     margin-left: 0
     margin-top: 1rem
+
+.whas
+  position: fixed
+  width: 68px
+  height: 68px
+  bottom: 25px
+  right: 25px
+  color: #FFF
+  border-radius: 50px
+  text-align: center
+  box-shadow: 2px 2px 3px #999
+  z-index: 999
+  background-color: #25d366
+  padding-top: 8px
